--- a/provider/css/main.styl
+++ b/provider/css/main.styl
@@ -28,6 +28,7 @@ colorBtnConfidence = #beceea
 @import "vendor/common/animation"
 @import "vendor/common/flexboxgrid"
 @import "vendor/common/icons-customize"
+@import "vendor/common/breadcrumb"
 
 /* plugins */
 
@@ -43,6 +44,9 @@ colorBtnConfidence = #beceea
 
 @import "vendor/templates/home"
 @import "vendor/templates/nuestra-notaria"
+@import "vendor/templates/nuestro-equipo"
+@import "vendor/templates/contacto"
+@import "vendor/templates/servicios"
 @import "vendor/parts/responsive"
 
 
