--- a/provider/css/main.styl
+++ b/provider/css/main.styl
@@ -29,6 +29,7 @@ colorBtnConfidence = #beceea
 @import "vendor/common/flexboxgrid"
 @import "vendor/common/icons-customize"
 @import "vendor/common/breadcrumb"
+@import "vendor/common/popup"
 
 /* plugins */
 
@@ -47,6 +48,9 @@ colorBtnConfidence = #beceea
 @import "vendor/templates/nuestro-equipo"
 @import "vendor/templates/contacto"
 @import "vendor/templates/servicios"
+@import "vendor/templates/detail"
+@import "vendor/templates/tyc"
+@import "vendor/templates/tramites"
 @import "vendor/parts/responsive"
 
 
